--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dubai Recovery Service</title>
+  <title>Dubai Recovery Service.com</title>
 </head>
 <body>
-  <h1>Dubai Recovery Service</h1>
-  <h2>Your Trusted Service Provider</h2>
+  <h1>DubaiRecoveryService.com is up for sale!</h1>
+  <h2>to proceed: sign up for an account on godaddy, find your domain using the search bar, add it to your cart and complete the payment.</h2>
 </body>
 </html>
