--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
   <h1>DubaiRecoveryService.com is up for sale!</h1>
-  <h2>to proceed: sign up for an account on godaddy,</h2>
+  <h2>to proceed:</h2>
+  &nbsp;&nbsp; <h2>sign up for an account on godaddy,</h2>
   &nbsp;&nbsp; <h2>find your domain using the search bar,</h2>
   &nbsp;&nbsp; <h2>add it to your cart and complete the payment.</h2>
 
